--- a/templates/main.html
+++ b/templates/main.html
@@ -504,6 +504,8 @@ document.addEventListener('DOMContentLoaded', () => {
     
     closeBtn?.addEventListener('click', () => {
         modal?.classList.remove('open');
+    });
+    closeInventoryBtnn?.addEventListener('click', () => {
         inventoryActionModal?.classList.remove('open'); 
     });
 
