--- a/templates/main.html
+++ b/templates/main.html
@@ -505,7 +505,7 @@ document.addEventListener('DOMContentLoaded', () => {
     closeBtn?.addEventListener('click', () => {
         modal?.classList.remove('open');
     });
-    closeInventoryBtnn?.addEventListener('click', () => {
+    closeInventoryBtn?.addEventListener('click', () => {
         inventoryActionModal?.classList.remove('open'); 
     });
 
