--- a/templates/main.html
+++ b/templates/main.html
@@ -559,32 +559,29 @@ document.addEventListener('DOMContentLoaded', () => {
 
     ToWithdraw = {}
 
-    inventoryActionBtn?.addEventListener('click', e => {
-        if (inventoryActionBtn.textContent == 'Initiate Deposit') {
+    inventoryActionBtn?.addEventListener('click', async e => {
+        if (inventoryActionBtn.textContent === 'Initiate Deposit') {
             window.location.href = '/deposititems';
         } else {
-            async function Withdraw() {
-                let itemdata = ToWithdraw
-                const response = await fetch('/withdrawitems', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    credentials: 'include',
-                    body: JSON.stringify({ itemdata})
-                });
+            const itemdata = ToWithdraw;
 
-                if (!response.ok) throw new Error('Request failed');
+            const response = await fetch('/withdrawitems', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                credentials: 'include',
+                body: JSON.stringify({ itemdata })
+            });
 
-                if (response.redirected) {
-                    window.location.href = response.url;
-                }
+            if (!response.ok) throw new Error('Request failed');
+
+            if (response.redirected) {
+                window.location.href = response.url;
             }
-
-            Withdraw();
         }
     });
-    
+
     inventoryModal?.addEventListener('click', e => { if (e.target === inventoryModal) inventoryModal.classList.remove('open'); });
 
     sortBtn?.addEventListener('click', e => {
