--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2">
+    <title>{% block title %}Home - AH Gambling{% endblock %}</title>
 
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -326,7 +327,9 @@
         <a href="/towers" class="sidebar-link">Towers</a>
         <a href="/mines" class="sidebar-link">Mines</a>
     </aside>
-
+        <main>
+        {% block content %}{% endblock %}
+    </main>
 </div>
 
 <div class="modal" id="inventoryActionModal">
