--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2">
-    <title>{% block title %}Home - AH Gambling{% endblock %}</title>
+    <title>{% block title %}Home - AH Gambling{% endblock %}</title>  
 
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -328,7 +328,7 @@
         <a href="/mines" class="sidebar-link">Mines</a>
     </aside>
         <main>
-        {% block content %}{% endblock %}
+        {% block content %}{% endblock %} 
     </main>
 </div>
 
@@ -520,6 +520,7 @@ document.addEventListener('DOMContentLoaded', () => {
     });
     closeInventoryBtn?.addEventListener('click', () => {
         inventoryActionModal?.classList.remove('open'); 
+        inventoryModal?.classList.remove('open');
     });
 
     modal?.addEventListener('click', e => { if (e.target === modal) modal.classList.remove('open'); });
@@ -542,23 +543,34 @@ document.addEventListener('DOMContentLoaded', () => {
         e.stopPropagation();
         modal?.classList.remove('open');
         inventoryModal?.classList.add('open');
-    });
+        const grid = document.querySelector('.inventory-grid');
+        grid.replaceChildren(); 
+        async function FillGrid() {
+            try {
+                const response = await fetch('/getbalance');
+                const data = await response.json(); 
 
-     async function DepositOrWithdraw(type) {
-        const response = await fetch('/' + type, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            credentials: 'include',
-        });
+                data.forEach(item => {
+                    const div = document.createElement('div');
+                    div.className = 'inventory-item';
 
-        if (!response.ok) throw new Error('Request failed');
+                    div.innerHTML = `
+                        <div class="select-box"></div>
+                        <img src="${item.ImageUrl}">
+                        <span class="serial">#${item.serial}</span>
+                        <span class="name">${item.itemname}</span>
+                    `;
 
-        if (response.redirected) {
-            window.location.href = response.url;
+                    grid.appendChild(div);
+                });
+
+            } catch (error) {
+                console.error('Error fetching', error);
+            }
         }
-    }
+
+        FillGrid();
+    });
 
     ToWithdraw = {}
 
@@ -611,23 +623,24 @@ document.addEventListener('DOMContentLoaded', () => {
         }
 
         if (inventoryInstructions) inventoryInstructions.innerHTML = `
-            1. Select items<br>
-            2. Enter amount<br>
-            3. Complete in-game
+            1. Click the button below to open Roblox<br>
+            2. Join the game to complete the transaction<br>
+            3. Complete deposit in-game
         `;
 
         inventoryActionModal?.classList.add('open');
     }
 
     closeInventoryActionBtn?.addEventListener('click', () => {
+        console.log(inventoryActionModal?.classList.contains('open'))
         if (inventoryActionModal?.classList.contains('open')) {
-            inventoryActionModal.classList.remove('open');
+            inventoryActionModal?.classList.remove('open');
             inventoryModal?.classList.add('open');
         } else {
             if (inventoryModal?.classList.contains('open')) {
                 inventoryModal?.classList.remove('open');
             } else {
-                inventoryActionModal.classList.add('open');
+                inventoryActionModal?.classList.add('open');
             }
         }
     });
