--- a/templates/main.html
+++ b/templates/main.html
@@ -547,6 +547,7 @@ document.addEventListener('DOMContentLoaded', () => {
                         <img src="${item.ImageUrl}">
                         <span class="serial">#${item.serial}</span>
                         <span class="name">${item.itemname}</span>
+                        <span class="value">${item.Value}</span>
                     `;
 
                     div.addEventListener('click', () => {
