--- a/templates/main.html
+++ b/templates/main.html
@@ -376,7 +376,7 @@
     <a href="/" class="logo">AH Gambling</a>
 
     <div class="balance-wrapper">
-        <button class="balance-btn">$1,000</button>
+        <button class="balance-btn"></button>
         <div class="balance-menu">
             <a id="openDeposit">Deposit</a>
             <a id="openWithdraw">Withdraw</a>
